--- a/algoritmos.html
+++ b/algoritmos.html
@@ -111,6 +111,17 @@ programação.
 				    			<!-- -->
 				    			<div class="col-sm-6 col-md-4">
 								    <div class="thumbnail">
+								    	<img src="./images/forca.jpg" alt="Jogo da Forca">
+								    	<div class="caption">
+								    		<h3>Jogo da Forca</h3>
+								    		<p>Tente adivinhar qual é a palavra oculta. </p>
+								    		<p><a href="https://gist.github.com/isabelailma/d30d8247630b3a41b9faa885aa98979c" target="_blank" class="btn btn-success" role="button">Código Fonte</a><img src="./images/python.png" alt="Jogo da Forca" width="10%" height="10%"></p>
+								      	</div>
+								    </div>
+							  	</div>
+							  	<!-- -->
+							  	<div class="col-sm-6 col-md-4">
+								    <div class="thumbnail">
 								    	<img src="..." alt="...">
 								    	<div class="caption">
 								    		<h3>Thumbnail label</h3>
