--- a/algoritmos.html
+++ b/algoritmos.html
@@ -273,7 +273,7 @@ programação.
 	<div class="container">
 		<hr>
 		<footer>
-			<p>&copy; Isabela Ilma Gonçalves | Daniel Roberto Aliotti Pires | Rondinelli Alves Andrade</p>
+			<p>&copy; Daniel Roberto Aliotti Pires | Isabela Ilma Gonçalves | Rondinelli Alves Andrade</p>
 		</footer>
 	</div>
 	<!-- /container -->
