--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
 								 		<h3>2º Semestre</h3>
 								 		<p>
 								 			<li>Engenharia de Software I<br>
-								 			<li>Linguagem de Programação<br>
+								 			<a href="lp.html" target="_blank"><li>Linguagem de Programação<br></li></a>
 								 			<li>Sistemas de Informação<br>
 								 			<li>Contabilidade<br>
 								 			<li>Cálculo<br>
@@ -118,7 +118,7 @@
 								 		<h3>3º Semestre</h3>
 								 		<p>
 								 			<li>Engenharia de Software II<br>
-								 			<li>Interação Humano Computador<br>
+								 			<a href="ihc.html" target="_blank"><li>Interação Humano Computador<br></li></a>
 								 			<li>Estruturas de Dados<br>
 								 			<li>Sistemas Operacionais I<br>
 								 			<li>Economia e Finanças<br>
@@ -199,7 +199,7 @@
 	<div class="container">
 		<hr>
 		<footer>
-			<p>&copy; Isabela Ilma Gonçalves | Daniel Roberto Aliotti Pires | Rondinelli Alves Andrade</p>
+			<p>&copy; Daniel Roberto Aliotti Pires | Isabela Ilma Gonçalves | Rondinelli Alves Andrade</p>
 		</footer>
 	</div>
 	<!-- /container -->
