--- a/sobre.html
+++ b/sobre.html
@@ -104,7 +104,7 @@
 	<div class="container">
 		<hr>
 		<footer>
-			<p>&copy; Isabela Ilma Gonçalves 2015</p>
+			<p>&copy; Daniel Roberto Aliotti Pires | Isabela Ilma Gonçalves | Rondinelli Alves Andrade</p>
 		</footer>
 	</div>
 	<!-- /container -->
