--- a/onibus.html
+++ b/onibus.html
@@ -54,12 +54,12 @@
 		<div class="container">
 			<div class = "panel panel-primary">
 			    <div class = "panel-heading">
-			    	<h3 class = "panel-title">Endereço</h3>
+			    	<h3 class = "panel-title">Horário</h3>
 			    </div>
 			    <div class = "panel-body">
 				    <table class="table">
 				    	<tr>
-				    		<th class="bg-primary">Horários e Itinerários de Ônibus</th>
+				    		<th class="bg-primary">Itinerários de Ônibus</th>
 				    	</tr>	
 				    	<tr>
 				    		<td>
@@ -73,6 +73,9 @@
 								</div>
 							</td>
 				    	</tr>
+				    	<tr>
+				    		<img src="images/horario_onibus.png" alt="Horário Onibus">
+				    	</tr>
 				    </table>
 				</div>
 			</div>
@@ -83,7 +86,7 @@
 	<div class="container">
 		<hr>
 		<footer>
-			<p>&copy; Isabela Ilma Gonçalves 2015</p>
+			<p>&copy; Daniel Roberto Aliotti Pires | Isabela Ilma Gonçalves | Rondinelli Alves Andrade</p>
 		</footer>
 	</div>
 	<!-- /container -->
