--- a/lp.html
+++ b/lp.html
@@ -239,7 +239,7 @@
 	<div class="container">
 		<hr>
 		<footer>
-			<p>&copy; Isabela Ilma Gonçalves | Daniel Roberto Aliotti Pires | Rondinelli Alves Andrade</p>
+			<p>&copy; Daniel Roberto Aliotti Pires | Isabela Ilma Gonçalves | Rondinelli Alves Andrade</p>
 		</footer>
 	</div>
 	<!-- /container -->
